Version 0.0.4

  * Italian translation thanks to Francesco
  * Possiblility to change transactions
  * Fix currency issues in transaction/account pages

Version 0.0.3

  * Add Currency per account
  * Cover/Graph only sum default currency
  * Setting add possibility to hide income accounts in main page
  * Transaction, preselect account if selected from show transaction page
  * German translations thanks to Lechindianer

Version 0.0.2

  * Possibility to add more account types
  * Add Transaction UI improve
  * Graph
  * Flickable bugfixes
  * Transaction sort fix
  * Transaction saldo fix
  * global currency setting
  * Finish translations
  * German translations
  * Open email app when user clicks maintainer in about page
  * Donate button
  * (Notice! there probadly is awkward translations, send me an email if you see any)

Version 0.0.1

  * First release